fix styling on smaller screens

--- a/src/host/css/main.css
+++ b/src/host/css/main.css
@@ -1,35 +1,54 @@
 @import 'reset.css';
 
-html {
-  height: 100%;
-}
 body {
   font-family: Arial, Helvetica, sans-serif;
-  height: 100%;
+}
+
+h1 {
+  font-weight: bold;
+  font-size: 2em;
+}
+p,
+h1 {
+  margin-bottom: 1em;
+}
+
+.intro {
+  grid-area: intro;
+}
+
+.main {
+  grid-area: main;
+}
+
+.control-panel {
+  grid-area: controls;
 }
 
 .layout {
-  height: 100%;
   display: grid;
   grid-row-gap: 20px;
   grid-column-gap: 20px;
   grid-template-columns: auto 300px;
-  grid-template-areas: 'main controls';
+  grid-template-areas:
+    'intro intro'
+    'main controls';
   padding: 10px;
-}
-
-@media only screen and (max-width: 768px) {
-  .layout {
-    grid-template-columns: auto;
-    grid-template-areas: 'main' 'controls';
-  }
 }
 
 #renderCanvas {
   width: 100%;
   height: 100%;
+  min-height: 500px;
   display: block;
   font-size: 0;
+}
+
+@media only screen and (max-width: 800px) {
+  .layout {
+    grid-template-columns: auto;
+    grid-template-areas: 'intro' 'main' 'controls';
+  }
 }
 
 .error-message {
@@ -86,13 +105,22 @@ input[type='text'][readonly]:focus {
   width: 100%;
 }
 
-.form-row-inline {
-  display: grid;
-  grid-template-columns: 7em auto;
-  grid-template-areas: 'label control';
+.form-inline-container {
+  display: flex;
+  flex-wrap: wrap;
 }
+.form-row-inline {
+  width: 21em;
+}
+
 .form-row-inline label {
   font-weight: bold;
+  display: inline-block;
+  width: 7em;
+}
+.form-row-inline .display-only {
+  display: inline-block;
+  width: 4em;
 }
 
 .form-row-checkbox label input[type='checkbox'] {
